@startuml
!theme plain
skinparam backgroundColor transparent
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName "Helvetica"
skinparam ArrowColor #33475b
skinparam state {
  BackgroundColor #FBFCFE
  BorderColor #33475b
}

state Pending
state Running
state Stopped
state Completed

[*] -right-> Pending : create

Pending -right-> Running : start

Running -down-> Stopped : stop
Running -right-> Completed : complete

Stopped -up-> Running : restart
Completed -left-> Running : restart

note bottom of Running
  Only **one** Running sprint
  per project at a time.
  Stop / Complete cancels pending
  reminders and notifies members.
end note

note top of Pending
  Pending may also transition
  directly to Stopped or Completed.
end note
@enduml
